[gd_scene load_steps=10 format=3 uid="uid://ctqe3n25pp4a0"]

[ext_resource type="Script" path="res://scripts/characters/stink_bug.gd" id="1_kfnav"]
[ext_resource type="Texture2D" uid="uid://cb6lhrvv8g1rq" path="res://assets/bugs/clickbug.png" id="2_xl8xd"]
[ext_resource type="FontFile" uid="uid://b6wpimsx1db6j" path="res://assets/fonts/m3x6.ttf" id="3_627hb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0qqqo"]
atlas = ExtResource("2_xl8xd")
region = Rect2(0, 0, 130, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueexv"]
atlas = ExtResource("2_xl8xd")
region = Rect2(0, 66, 130, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvy32"]
atlas = ExtResource("2_xl8xd")
region = Rect2(130, 0, 130, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxmbd"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_0qqqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueexv")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_wvy32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueexv")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkwol"]
size = Vector2(91, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rxuq"]
size = Vector2(158, 61)

[node name="ClickBug" type="StaticBody2D"]
script = ExtResource("1_kfnav")
type = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gxmbd")
autoplay = "default"
frame_progress = 0.597667

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14.5, 5.5)
shape = SubResource("RectangleShape2D_hkwol")

[node name="Interact_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_Area"]
position = Vector2(-7, -3.5)
shape = SubResource("RectangleShape2D_1rxuq")

[node name="Interact_Label" type="Label" parent="."]
offset_left = -13.0
offset_top = -54.0
offset_right = 27.0
offset_bottom = -28.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("3_627hb")
theme_override_font_sizes/font_size = 32
text = "[!]"
horizontal_alignment = 1

[connection signal="body_entered" from="Interact_Area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="Interact_Area" to="." method="_on_interact_area_body_exited"]
