[gd_scene load_steps=9 format=3 uid="uid://b82prg085h2a0"]

[ext_resource type="Script" path="res://scripts/characters/stink_bug.gd" id="1_lu1v1"]
[ext_resource type="Texture2D" uid="uid://p4bbeyc1hrb7" path="res://assets/characters/NPC2.png" id="2_cos63"]
[ext_resource type="FontFile" uid="uid://b6wpimsx1db6j" path="res://assets/fonts/m3x6.ttf" id="3_imtiq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ecb8a"]
atlas = ExtResource("2_cos63")
region = Rect2(0, 0, 42, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwi0w"]
atlas = ExtResource("2_cos63")
region = Rect2(42, 0, 42, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxmbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecb8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwi0w")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkwol"]
size = Vector2(25, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rxuq"]
size = Vector2(141, 63)

[node name="Moth2" type="StaticBody2D"]
script = ExtResource("1_lu1v1")
type = 21

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_gxmbd")
autoplay = "default"
frame = 1
frame_progress = 0.412658

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_hkwol")

[node name="Interact_Area" type="Area2D" parent="."]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_Area"]
position = Vector2(1.5, -2.5)
shape = SubResource("RectangleShape2D_1rxuq")

[node name="Interact_Label" type="Label" parent="."]
offset_left = -13.0
offset_top = -54.0
offset_right = 27.0
offset_bottom = -28.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("3_imtiq")
theme_override_font_sizes/font_size = 32
text = "[!]"
horizontal_alignment = 1

[connection signal="body_entered" from="Interact_Area" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="Interact_Area" to="." method="_on_interact_area_body_exited"]
